--- a/product.html
+++ b/product.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SocialTech - PRODUCT プロダクト</title>
+  <title>SocialTech - PRODUCT プロダクトプトダクト</title>
   <meta charset="UTF-8">
   <meta name="description" content="SocialTechの4つのプロダクトを紹介します">
 
